--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,6 +3,9 @@ body{
     height: 100%;
     background: linear-gradient(to right, #200122, #6f0000);
 }
+div.row{
+    width: 100%;
+}
 div.num{
     background: linear-gradient(to right, #f85032, #e73827);
     width: 200px;
